# GMP

./: .gitignore  CITATIONS.bib  README.md  build.sh  install.sh
src/gmp_test/: CMakeLists.txt  package.xml
src/gmp_test/include/gmp_test/: main.cpp
src/gmp_test/include/gmp_test/utils/: utils.h
src/gmp_test/launch/: nDoF_GMP_test.launch  orient_GMP_test.launch  update_GMP_test.launch
src/gmp_test/matlab/lib/dmp_lib/: import_dmp_lib.m
src/gmp_test/matlab/lib/gmp_lib/: GMPConstr.m
src/gmp_test/matlab/lib/io_lib/: use_namespace_io_.m
src/gmp_test/matlab/lib/math_lib/: import_math_lib.m
src/gmp_test/matlab/lib/plot_lib/: animate_3d_trajectory_of_frames.m  plotFrame.m
src/gmp_test/matlab/new_gmp_structure/data/: orient_train_data.mat  train_data.mat
src/gmp_test/matlab/new_gmp_structure/generate_data/: plot_orient_data.m
src/gmp_test/matlab/new_gmp_structure/optimization/: gmp_online_update_test.m  offline_opt_test.m  online_update_test.m  update_gmp_test.m
src/gmp_test/matlab/new_gmp_structure/simulation/: orient_gmp_test.m
src/gmp_test/matlab/new_gmp_structure/utils/: get5thOrderPol.m
src/gmp_test/matlab/test/: JerkSmoot.m  classic_rev_DMP_high_gains.m  create_5thOrdPol_train_data.m  goal_perturb.m  limit_avoid_test.m  phase_stopping.m  plot_exec_path.m  rec_joint_data_plot.m  reverse_dmp.m  set_matlab_utils_path.m  spat_scaling.m  temp.m  temp_2222.m  temp_scaling.m
src/gmp_test/matlab/test/create_trajectory/: data.mat
src/gmp_test/matlab/test/data/: fifthOrd_train_data.mat
src/gmp_test/matlab/test/paper_figures/: exp3_orient_phase_stop.eps  exp3_pos_phase_stop.fig  exp_orient_3D_path.eps  exp_orient_3D_path.fig  goal_perturb.fig  limit_avoid.fig  obst_avoid.eps  phase_stop.fig  reverse.eps  spat_scaling.eps  temp_scaling.fig
src/gmp_test/matlab/test/spatial_scale_test/: RotModel.m  StdModel.m  TargetModel.m  set_matlab_utils_path.m
src/gmp_test/matlab/test/utils/: simulateDMP.m  simulateGMP.m  simulateGMPo_in_log_space.m
src/gmp_test/src/: add_libraries_to_matlab_path.m
src/gmp_test/src/misc/: gmp_io_example.m  io_example.m
src/gmp_test/src/optimization/: update_gmp_test.cpp
src/gmp_test/src/optimization/constr_opt/: constr_opt_orient_test.m  constr_opt_pos_test.cpp  constr_opt_pos_test.m  constr_opt_pos_test2.cpp  constr_opt_pos_test2.m  constr_opt_pos_test2_plot.m  constr_opt_pos_test_plot.m  constr_opt_test.cpp  constr_opt_test.m  constr_rec_opt_test.m  constr_rec_opt_test2.m  latex_pos_constr.m  opt_3D_path_case1.eps  opt_3D_path_case2.eps  opt_Zpos_case1.eps  opt_Zpos_case2.eps  plot_results.m  temp.m  train_data_pos_constr.mat
src/gmp_test/src/optimization/update_gmp/: GMPo_Update.m  orient_gmp_update.cpp  orient_gmp_update.m  plot_orient_results.m  plot_pos_results.m  plot_results.m  pos_gmp_update.cpp  pos_gmp_update.m  update_gmp_test.cpp  update_gmp_test.m
src/gmp_test/src/simulation/: nDoF_gmp_plot.m  nDoF_gmp_test.cpp  nDoF_gmp_test.m  nDoF_gmp_test_update.m  orient_gmp_plot.m  orient_gmp_test.cpp  orient_gmp_test.m  temp.m
src/gmp_test/src/utils/: utils.cpp
src/gmp_test/src/via-points/: temp.m  train_data.mat  vpoints_sim.m
src/lib/c++/gmp_lib/: CMakeLists.txt  package.xml
src/lib/c++/osqp_lib/: CMakeLists.txt
src/lib/c++/osqp_lib/cmake/: FindOSQPLibrary.cmake
src/lib/c++/osqp_lib/src/: qp_solver.cpp
src/lib/gmp_lib/: CMakeLists.txt  package.xml
src/lib/gmp_lib/include/gmp_lib/: gmp_lib.h  utils.h
src/lib/gmp_lib/src/GMP/: GMP.cpp  GMP_MPC.cpp  GMP_Opt.cpp  GMP_Update.cpp  GMP_nDoF.cpp  GMP_nDoF_IO.cpp  GMP_nDoF_Opt.cpp  GMP_nDoF_Update.cpp  GMP_regressor.cpp  GMPo.cpp  GMPo_IO.cpp  GMPo_Update.cpp
src/lib/gmp_lib/src/io/: file_io.cpp  gmp_io.cpp  io.cpp  xml_parser.cpp
src/lib/gmp_lib/src/math/: math.cpp  quaternions.cpp
src/lib/io_lib/: CMakeLists.txt  package.xml
src/lib/io_lib/include/io_lib/: file_io.h  io_lib.h  io_utils.h  print_utils.h  termcolor.hpp  xml_parser.h
src/lib/io_lib/src/: file_io.cpp  io_utils.cpp  print_utils.cpp  xml_parser.cpp
src/lib/math_lib/: CMakeLists.txt  package.xml
src/lib/math_lib/include/math_lib/: convertions.h  dtw.h  math.h  math_lib.h  quaternions.h  svf.h
src/lib/math_lib/src/: convertions.cpp  dtw.cpp  math.cpp  quaternions.cpp  svf.cpp
src/lib/plot_lib/: CMakeLists.txt  package.xml
src/lib/plot_lib/include/plot_lib/: qt_plot.cpp  qt_plot.h  utils.h
src/lib/plot_lib/resources/: resource.qrc
src/lib/plot_lib/src/source_list/: utils.cpp
src/project_name_/: CMakeLists.txt  package.xml
src/project_name_/include/project_name_/: main.cpp
src/project_name_/include/project_name_/utils/: utils.h
src/project_name_/launch/: nDoF_GMP_test.launch  orient_GMP_test.launch  program.launch  program_ur.launch
src/project_name_/matlab/lib/plot_lib/: plotAnimatedFrame.m  plot_3Dpath_with_orientFrames.m
src/project_name_/matlab/new_gmp_structure/: u.m
src/project_name_/matlab/new_gmp_structure/data/: traj_opt_train_data.mat
src/project_name_/matlab/new_gmp_structure/generate_data/: generateData.m  plot_3D_path.m
src/project_name_/matlab/new_gmp_structure/limit_avoid/: limit_avoid_test.m  set_matlab_utils_path.m
src/project_name_/matlab/new_gmp_structure/optimization/: update_gmp_test2.m
src/project_name_/matlab/new_gmp_structure/simulation/: nDoF_gmp_test.m
src/project_name_/matlab/new_gmp_structure/utils/: simulateGMPo_in_Cart_space.m
src/project_name_/matlab/test/: limit_avoid.m  obstacle_avoid.m  plot_exec_data.m  plot_train_data.m  reverse_gmp.m  test_nDoF_gmp.m  test_orient_gmp.m  u.m
src/project_name_/matlab/test/create_trajectory/: create_orient_traj.m  create_pos_traj.m
src/project_name_/matlab/test/paper_figures/: exp3_orient_phase_stop.fig  exp3_pos_phase_stop.eps  exp_pos_3D_path.eps  exp_pos_3D_path.fig  exp_pos_x.eps  exp_pos_x.fig  exp_train_path.fig  exp_train_vel.eps  exp_train_vel.fig  (+8 more)
src/project_name_/src/optimization/: update_gmp_plot.m  update_gmp_test.cpp
src/project_name_/src/simulation/: nDoF_gmp_plot.m  nDoF_gmp_test.cpp  orient_gmp_plot.m  orient_gmp_test.cpp
src/project_name_/src/utils/: utils.cpp
(+237 files in other folders)
