<?xml version="1.0"?>
<package>
  <name>math_lib</name>
  <version>0.0.1</version>
  <description>Math utilities</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>armadillo</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <run_depend>catkin</run_depend>
  <run_depend>armadillo</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
