<?xml version="1.0"?>
<package>
  <name>plot_lib</name>
  <version>0.0.0</version>
  <description>Plot library base on QCustomPlot</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export></export>

</package>
